--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^2.23.0
+  firebase_core: ^2.24.2
   firebase_auth: ^4.14.1
   flutter_dialog_helper: ^0.2.0
   google_fonts: ^6.1.0
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.1
   flutter_form_builder: ^9.1.1
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/images
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
