--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   get: ^4.6.1
   flutter_form_builder: ^9.1.1
   cupertino_icons: ^1.0.2
+  firebase_storage: ^11.5.2
+  cloud_firestore: ^4.14.0
+  image_picker: ^1.0.6
+  random_string: ^2.3.1
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
@@ -64,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - assets/images
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
