--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^1.0.6
   random_string: ^2.3.1
   flutter_bloc: ^8.1.1
+  flutter_screenutil: ^5.0.1
+  flutter_braintree: ^3.0.0
 
 dev_dependencies:
   flutter_test:
