--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_storage: ^11.5.2
   cloud_firestore: ^4.14.0
-  image_picker: ^1.0.6
+  image_picker: ^0.8.9
+  flutter_image_uploading: ^0.0.2
   random_string: ^2.3.1
   flutter_bloc: ^8.1.1
+  flutter_rating_bar: ^4.0.1
+  intl_phone_field: ^3.2.0
+  image_field: ^0.0.5
+  image_picker_web: ^3.1.1
 
 dev_dependencies:
   flutter_test:
