--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_braintree: ^3.0.0
   intl_phone_field: ^3.2.0
   flutter_rating_bar: ^4.0.1
+  searchfield: ^0.9.0
 
 dev_dependencies:
   flutter_test:
